// vim: tabstop=2 shiftwidth=2 softtabstop=2 smarttab expandtab autoindent

= Tackler: Changelog

== Releases

=== Tackler release XX.YY.Z

==== New features and changes

New features:

* Support TOML 1.1.0 configuration syntax
** This adds support of link:https://toml.io/en/v1.1.0#inline-table[indented inline tables]
   for tackler configuration files
* ...
** ...

Changed functionality:

* ...
** ...


==== Fixes

Fixes in this release ...


==== Development

Updated dependencies (major or minor version):

* gix: 0.75.0
* toml: 0.9.10
* uuid: 0.19.0

Development dependencies:

* criterion: 0.8


===== Rust toolchain

Rust Edition:: 2024
MSRV:: 1.85.0

==== Release Artifacts

[cols="1,2",width=50%]
|===
|Component    | Version

|Tackler CLI  | TODO: XX.YY.Z
|tackler-core | TODO: No changes
|tackler-api  | TODO: No changes
|tackler-rs   | TODO: No changes
|===

'''


=== Tackler release 25.10.1

==== New features and changes

New features: None

Changed functionality:

* Add `Append` method for `TxnData`


==== Fixes

Fixes in this release:

* Harmonized various error message styles and formatting
** Provide more helpful error message in case of unknown hash algorithm


==== Development

Updated dependencies (major or minor version):

* gix: 0.74.1
* regex: 1.12.2
* rust_decimal: 1.39.0
* toml: 0.9.2
* uuid: 1.18.0

===== Rust toolchain

Rust Edition:: 2024
MSRV:: 1.85.0

==== Release Artifacts

[cols="1,2",width=50%]
|===
|Component    | Version

|Tackler CLI  | 25.10.1
|tackler-core | 0.13.0
|tackler-api  | 0.12.0
|tackler-rs   | 0.11.0
|===


'''


=== Tackler release 25.06.1

==== New features and changes

New features:

* New credit account reporting option `--invert` for all reports
  and Equity export
  (link:https://github.com/tackler-ng/tackler/issues/99[GH-99])
* Enhanced and better error messages in case of invalid configuration file

Changed functionality:

* Equity export: Use price data if commodity conversion is activated