@@ -1,12 +1,13 @@
 /*
- * Tackler-NG 2023-2024
+ * Tackler-NG 2023-2025
  * SPDX-License-Identifier: Apache-2.0
  */
 
-use crate::filters;
 use crate::filters::IndentDisplay;
+use crate::{filters, tackler};
 use filters::TxnFilter;
 
+use crate::filters::logic::logic_serde;
 use jiff::tz::TimeZone;
 use serde::{Deserialize, Serialize};
 use std::fmt::Formatter;
@@ -20,12 +21,26 @@ use std::fmt::Formatter;
 /// [`FilterTxn`]: ../../../tackler_core/filter/index.html
 #[derive(Serialize, Deserialize, Clone, Debug)]
 pub struct TxnFilterAND {
-    // todo: functionality, test
-    // todo-test: aa8aa459-b100-403e-98ea-7381ca58727d
-    // desc: "reject AND filter with only one filter"
     #[doc(hidden)]
-    #[serde(rename = "txnFilters")]
+    #[serde(rename = "txnFilters", with = "logic_serde")]
     pub txn_filters: Vec<TxnFilter>,
+}
+
+impl TxnFilterAND {
+    /// Create a new AND filter based on provided filters
+    ///
+    /// # Errors
+    /// Return Err if there are less than two filters
+    pub fn new(filters: Vec<TxnFilter>) -> Result<TxnFilterAND, tackler::Error> {
+        if filters.len() > 1 {
+            Ok(TxnFilterAND {
+                txn_filters: filters,
+            })
+        } else {
+            let msg = "Expected multiple filters for logical AND filter";
+            Err(msg.into())
+        }
+    }
 }
 
 impl IndentDisplay for TxnFilterAND {
@@ -41,6 +56,29 @@ mod tests {
     use indoc::indoc;
     use jiff::tz;
     use tackler_rs::IndocUtils;
+
+    #[test]
+    // test: aa8aa459-b100-403e-98ea-7381ca58727d
+    // desc: reject AND filter with only one filter
+    fn and_with_one_filter() {
+        let v = vec![TxnFilter::NullaryTRUE(NullaryTRUE {})];
+        let tf_res: Result<TxnFilterAND, tackler::Error> = TxnFilterAND::new(v);
+        assert!(
+            tf_res.unwrap_err(/*:test:*/).to_string().contains("Expected multiple filters for logical AND filter")
+        );
+    }
+
+    #[test]
+    // test: 2671b0ff-8b8d-42c8-95ae-e2dcf4d15ab0
+    // desc: reject AND filter with only one filter (JSON)
+    fn and_with_one_filter_json() {
+        let filter_json_str =
+            r#"{"txnFilter":{"TxnFilterAND":{"txnFilters":[{"NullaryTRUE":{}}]}}}"#;
+        let tf_res = serde_json::from_str::<FilterDefinition>(filter_json_str);
+        assert!(
+            tf_res.unwrap_err(/*:test:*/).to_string().contains("Expected multiple filters for logical filter")
+        );
+    }
 
     #[test]
     // test: caa264f6-719f-49e9-9b56-3bdf0b0941ec
